--- a/heraldportfolio/style/styles.css
+++ b/heraldportfolio/style/styles.css
@@ -1,5 +1,6 @@
 *{
     box-sizing: border-box;
+    scroll-behavior: smooth;
 }
 :root{
     --black: #000;
@@ -10,7 +11,7 @@
 }
 body{
     background-color: var(--main-bg-color);
-    font-family: "serif", sans-serif;
+    font-family: "Inria Serif", serif;
 }
 /* navigation bar */
 .navbar{
@@ -19,11 +20,12 @@ body{
 .navbar-brand{
     height: 100%;
     width: 100%;
-    max-width: 65px;
+    max-width: 90px;
     padding: 5px;
     background-color: var(--yellow);
     font-weight: bold;
     text-align: center;
+    font-size: 1.3rem;
 }
 header{
     margin-bottom: 200px; /* remove later for mobile*/
@@ -35,7 +37,7 @@ header{
     }
     .nav-link{
         margin: 0 1rem ;
-        font-family: sans-serif;
+        font-size: 1.3rem;
     }
   }
 /* landing-page */
@@ -51,7 +53,7 @@ header{
 }
 .landing-page-text h3{
     font-size: 2rem;
-    font-weight: bold;
+    font-weight: 500;
 }
 .landing-page-text h1{
     font-size: 2.4rem;
