--- a/heraldportfolio/style/styles.css
+++ b/heraldportfolio/style/styles.css
@@ -243,6 +243,7 @@ label {
 .featured-projects-container:hover img{
     filter: grayscale(0);
     transform: scale(1.1);
+    border-radius: 0;
 }
 .featured-projects-container:hover li{
     border: 1px solid white;
