--- a/heraldportfolio/style/styles.css
+++ b/heraldportfolio/style/styles.css
@@ -162,6 +162,9 @@ label {
     text-align: center;
     margin-top: 220px;
 }
+.about-container p{
+    font-size: 1.2rem;
+}
 /* featured projects */
 #projects{
     margin: 10px;
